$Id$

                           Commons Configuration Package
                               Version 1.10
                               Release Notes


INTRODUCTION
============

This document contains the release notes for this version of the Commons
Configuration component. It describes the changes since the previous version.
The Commons Configuration software library provides a generic configuration
interface which enables an application to read configuration data from a variety
of sources.

The 1.10 release contains a couple of minor bug fixes and improvements. There
are no important new features. The idea is to release the current changes which
have been applied to the 1.x branch, so that we can start with new development
on an improved (and partly binary incompatible) 2.0 version.

As there are small changes only, Commons Configuration 1.10 is fully binary
compatible to the previous version. The minimum required Java version is 1.5.

Please note that this release was compiled with the Java 1.6 compiler in 1.5 
mode. There is a very small chance that this introduced incompatibilities with
the Java 1.5 runtime. Java 1.5 was EOLed in October 2009. 

Following is a complete list of all changes in the new 1.10 release:

BUG FIXES IN 1.10
=================

* [CONFIGURATION-556] Regression with SystemProperties in 1.8 and 1.9

  In 1.7 and before, any change to the system properties was immediately reflected in a 
  SystemConfiguration object. This behaviour broke in 1.8 and 1.9. This has been fixed
  for 1.10.



IMPROVEMENTS AND NEW FEATURES IN 1.10
=====================================

OTHER CHANGES
=============